--- a/index.html
+++ b/index.html
@@ -10,15 +10,29 @@
 <style>
 :root{
  --neon:#00ff66;
- --bg:#02010a;
+ --rgb:linear-gradient(90deg,#ff004c,#00ffe7,#7cff00,#ff004c);
 }
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
  background:radial-gradient(circle at top,#061b0f,#000);
  color:#d0ffd0;
  font-family:Orbitron,sans-serif;
 }
 
+/* RGB TEXT */
+.rgb{
+ background:var(--rgb);
+ -webkit-background-clip:text;
+ color:transparent;
+ animation:rgb 6s linear infinite;
+}
+@keyframes rgb{
+ from{background-position:0%}
+ to{background-position:400%}
+}
+
+/* LOGIN */
 #login{
  position:fixed;inset:0;
  display:flex;align-items:center;justify-content:center;
@@ -30,125 +44,175 @@ body{
  text-align:center;
  box-shadow:0 0 30px var(--neon);
 }
-.box h1{
- font-family:'Press Start 2P';
- font-size:14px;
- color:var(--neon);
- margin-bottom:15px;
-}
-.box input, .box button{
+.box input,.box button{
  width:100%;
- padding:10px;
  margin-top:10px;
+ padding:10px;
  background:#000;
  color:#0f0;
  border:1px solid var(--neon);
 }
 
+/* HEADER */
 header{
  text-align:center;
  padding:50px 15px;
 }
 header h1{
- color:var(--neon);
- text-shadow:0 0 20px var(--neon);
+ font-size:32px;
+ text-shadow:0 0 25px var(--neon);
 }
 
+/* MUSIC BUTTON */
+#musicBtn{
+ margin-top:20px;
+ padding:10px 20px;
+ border:1px solid var(--neon);
+ background:black;
+ color:var(--neon);
+ font-family:Orbitron;
+ cursor:pointer;
+ box-shadow:0 0 15px var(--neon);
+}
+
+/* SECTIONS */
 section{
  max-width:1000px;
  margin:40px auto;
  padding:15px;
 }
-h2{
- color:#00ffaa;
- margin-bottom:10px;
-}
+h2{margin-bottom:10px}
 
+/* GAME BOX */
 .game{
  background:#000;
  border:1px solid var(--neon);
  padding:10px;
  margin-bottom:25px;
- box-shadow:0 0 15px #00ff6660;
+ box-shadow:0 0 20px #00ff6670;
+ position:relative;
+ animation:glow 4s infinite alternate;
 }
-canvas{display:block;margin:auto;background:#010c05}
+@keyframes glow{
+ from{box-shadow:0 0 15px #00ff66}
+ to{box-shadow:0 0 30px #00ffaa}
+}
 
+canvas{
+ display:block;
+ margin:auto;
+ background:#010c05;
+}
+
+/* GAME OVER */
+.overlay{
+ position:absolute;
+ inset:0;
+ background:rgba(0,0,0,.85);
+ display:none;
+ align-items:center;
+ justify-content:center;
+ flex-direction:column;
+ animation:pop .4s ease;
+}
+@keyframes pop{
+ from{transform:scale(.7);opacity:0}
+ to{transform:scale(1);opacity:1}
+}
+.overlay button{
+ padding:10px 15px;
+ background:var(--neon);
+ border:none;
+ cursor:pointer;
+ font-weight:bold;
+}
+
+/* LEADERBOARD */
 #leaderboard li{
  border-bottom:1px solid #0f03;
  padding:5px;
+}
+
+/* QR */
+.qr img{
+ width:220px;
+ image-rendering:pixelated;
+ background:white;
+ padding:10px;
 }
 
 footer{
  text-align:center;
  opacity:.7;
  padding:15px;
- font-size:14px;
-}
-.qr{
- background:#fff;
- padding:10px;
- display:inline-block;
 }
 </style>
 </head>
 
 <body>
 
+<!-- LOGIN -->
 <div id="login">
  <div class="box">
-  <h1>ENTER CYBER ARCADE</h1>
+  <h1 class="rgb">ENTER CYBER ARCADE</h1>
   <input id="name" placeholder="Username">
-  <button onclick="go()">ENTER</button>
+  <button onclick="enter()">ENTER</button>
   <button onclick="guest()">GUEST</button>
  </div>
 </div>
 
 <header>
-<h1>NAFIZ CYBER ARCADE</h1>
-<p>Free Games • Skill • Community • Hope</p>
+<h1 class="rgb">NAFIZ CYBER ARCADE</h1>
+<p>Free Games • Skill • Hope</p>
+<button id="musicBtn" onclick="toggleMusic()">🎵 MUSIC ON</button>
 </header>
 
 <section>
-<h2>Founder Story</h2>
+<h2 class="rgb">Founder Story</h2>
 <p>
-My name is <b>Nafiz</b>. I built this arcade alone using a Chromebook.
-Life hasn’t been easy. I lost my parents and don’t have much, but I still
-believe in building something honest with my own hands.
-Gaming helped me survive mentally, and this website is my way of turning
-skill and creativity into hope. If you enjoy this arcade, your support
-means more than money — it means I can keep going.
+My name is <b>Nafiz</b>. I built this arcade alone using only a Chromebook.
+Life hasn’t been easy, but coding and gaming kept me alive.
+This site is honest, free, and made with real effort.
 </p>
 </section>
 
+<!-- SNAKE -->
 <section>
-<h2>🎮 Snake Game</h2>
+<h2 class="rgb">🐍 Snake Game</h2>
 <div class="game">
 <canvas id="snake" width="300" height="300"></canvas>
+<div class="overlay" id="snakeOver">
+ <h3 class="rgb">GAME OVER</h3>
+ <p id="snakeScore"></p>
+ <button onclick="resetSnake()">PLAY AGAIN</button>
+</div>
 </div>
 </section>
 
+<!-- RUNNER -->
 <section>
-<h2>🏃 Runner Game</h2>
+<h2 class="rgb">🏃 Runner Game</h2>
 <div class="game">
 <canvas id="run" width="400" height="200"></canvas>
+<div class="overlay" id="runOver">
+ <h3 class="rgb">GAME OVER</h3>
+ <p id="runScore"></p>
+ <button onclick="resetRun()">PLAY AGAIN</button>
+</div>
 </div>
 </section>
 
 <section>
-<h2>🏆 Leaderboard</h2>
+<h2 class="rgb">🏆 Leaderboard</h2>
 <ul id="leaderboard"></ul>
 </section>
 
 <section>
-<h2>❤️ Support the Creator</h2>
-<p>
-This arcade is <b>free</b>.  
-If you enjoyed it and want to support me, you can donate.
-No betting. No promises. Just support.
-</p>
+<h2 class="rgb">❤️ Support the Creator</h2>
+<p>Voluntary support only.</p>
 <p><b>bKash:</b> 01947179493</p>
 <div class="qr">
-<canvas id="qr"></canvas>
+<img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=bKash%2001947179493">
 </div>
 </section>
 
@@ -157,28 +221,35 @@ No betting. No promises. Just support.
 </footer>
 
 <script>
+/* USER */
 let user="Guest";
-
-function go(){
+function enter(){
  user=document.getElementById("name").value||"Player";
  document.getElementById("login").style.display="none";
 }
-function guest(){
- document.getElementById("login").style.display="none";
-}
+function guest(){document.getElementById("login").style.display="none";}
 
-/* QR CODE */
-const qr=document.getElementById("qr").getContext("2d");
-function drawQR(){
- qr.fillStyle="#fff";qr.fillRect(0,0,200,200);
- qr.fillStyle="#000";
- for(let i=0;i<200;i+=20){
-  for(let j=0;j<200;j+=20){
-   if(Math.random()>0.5)qr.fillRect(i,j,15,15);
-  }
+/* MUSIC */
+let audioCtx,oscillator,gainNode,playing=false;
+function toggleMusic(){
+ if(!playing){
+  audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+  oscillator=audioCtx.createOscillator();
+  gainNode=audioCtx.createGain();
+  oscillator.type="sawtooth";
+  oscillator.frequency.value=80;
+  gainNode.gain.value=0.03;
+  oscillator.connect(gainNode);
+  gainNode.connect(audioCtx.destination);
+  oscillator.start();
+  musicBtn.innerText="🔇 MUSIC OFF";
+  playing=true;
+ }else{
+  oscillator.stop();audioCtx.close();
+  musicBtn.innerText="🎵 MUSIC ON";
+  playing=false;
  }
 }
-drawQR();
 
 /* LEADERBOARD */
 let scores=JSON.parse(localStorage.getItem("scores")||"[]");
@@ -190,58 +261,87 @@ function save(score){
  show();
 }
 function show(){
- let ul=document.getElementById("leaderboard");
- ul.innerHTML="";
+ leaderboard.innerHTML="";
  scores.forEach(s=>{
   let li=document.createElement("li");
-  li.textContent=`${s.user} - ${s.score}`;
-  ul.appendChild(li);
+  li.textContent=`${s.user} — ${s.score}`;
+  leaderboard.appendChild(li);
  });
 }
 show();
 
 /* SNAKE */
-const sc=document.getElementById("snake").getContext("2d");
-let snake=[[150,150]],dx=10,dy=0,food=[100,100],score=0;
+const sc=snake.getContext("2d");
+let snakeBody,dx,dy,food,sscore,alive;
+function resetSnake(){
+ snakeBody=[[150,150]];
+ dx=10;dy=0;
+ food=[100,100];
+ sscore=0;alive=true;
+ snakeOver.style.display="none";
+}
+resetSnake();
+
 document.addEventListener("keydown",e=>{
  if(e.key=="ArrowUp"){dx=0;dy=-10}
  if(e.key=="ArrowDown"){dx=0;dy=10}
  if(e.key=="ArrowLeft"){dx=-10;dy=0}
  if(e.key=="ArrowRight"){dx=10;dy=0}
 });
-function snakeGame(){
- sc.clearRect(0,0,300,300);
- snake.unshift([snake[0][0]+dx,snake[0][1]+dy]);
- if(snake[0][0]==food[0]&&snake[0][1]==food[1]){
-  score+=10;
-  food=[Math.floor(Math.random()*29)*10,Math.floor(Math.random()*29)*10];
- }else snake.pop();
- sc.fillStyle="red";sc.fillRect(food[0],food[1],8,8);
- snake.forEach((s,i)=>{
-  sc.fillStyle=i==0?"#0f0":"#088";
-  sc.fillRect(s[0],s[1],8,8);
- });
- if(snake[0][0]<0||snake[0][1]<0||snake[0][0]>300||snake[0][1]>300){
-  save(score);score=0;snake=[[150,150]];
+
+function snakeLoop(){
+ if(alive){
+  sc.clearRect(0,0,300,300);
+  snakeBody.unshift([snakeBody[0][0]+dx,snakeBody[0][1]+dy]);
+  if(snakeBody[0][0]==food[0]&&snakeBody[0][1]==food[1]){
+   sscore+=10;
+   food=[Math.floor(Math.random()*29)*10,Math.floor(Math.random()*29)*10];
+  }else snakeBody.pop();
+  sc.fillStyle="red";sc.fillRect(food[0],food[1],8,8);
+  snakeBody.forEach((s,i)=>{
+   sc.fillStyle=i?"#088":"#0f0";
+   sc.fillRect(s[0],s[1],8,8);
+  });
+  if(snakeBody[0][0]<0||snakeBody[0][1]<0||snakeBody[0][0]>300||snakeBody[0][1]>300){
+   alive=false;
+   save(sscore);
+   snakeScore.innerText="Score: "+sscore;
+   snakeOver.style.display="flex";
+  }
  }
+ requestAnimationFrame(snakeLoop);
 }
-setInterval(snakeGame,120);
+snakeLoop();
 
 /* RUNNER */
-const rc=document.getElementById("run").getContext("2d");
-let y=150,vy=0,obs=400,rs=0;
-document.body.onclick=()=>vy=-12;
-function runner(){
- rc.clearRect(0,0,400,200);
- vy+=1;y+=vy;
- if(y>150){y=150;vy=0}
- rc.fillStyle="#0f0";rc.fillRect(30,y,20,20);
- obs-=5;if(obs<0){obs=400;rs+=5}
- rc.fillStyle="red";rc.fillRect(obs,160,20,20);
- if(obs<50&&y>140){save(rs);rs=0}
- requestAnimationFrame(runner);
+const rc=run.getContext("2d");
+let ry,vy,obs,rs,ralive;
+function resetRun(){
+ ry=150;vy=0;obs=400;rs=0;ralive=true;
+ runOver.style.display="none";
 }
-runner();
+resetRun();
+document.body.onclick=()=>{if(ralive)vy=-12};
+
+function runLoop(){
+ if(ralive){
+  rc.clearRect(0,0,400,200);
+  vy+=1;ry+=vy;
+  if(ry>150){ry=150;vy=0}
+  rc.fillStyle="#0f0";rc.fillRect(30,ry,20,20);
+  obs-=5;
+  rc.fillStyle="red";rc.fillRect(obs,160,20,20);
+  if(obs<0){obs=400;rs+=5}
+  if(obs<50&&ry>140){
+   ralive=false;
+   save(rs);
+   runScore.innerText="Score: "+rs;
+   runOver.style.display="flex";
+  }
+ }
+ requestAnimationFrame(runLoop);
+}
+runLoop();
 </script>
 
 </body>
